[metadata]
name = flake8_wot
version = 0.2.0
description = flake8 plugin which checks use of deprecated typing.List, typing.Dict, etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrijk/flake8-wot
author = Maurits Rijk
author_email = maurits.rijk@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
python_requires = >=3.7

[options]
py_modules = flake8_wot
setup_requires =
    wheel
install_requires =
    flake8>=3.7

[options.entry_points]
flake8.extension =
    WOT=flake8_wot:Plugin